# Deepseek_Pdf_Chat

./: .gitignore  README.md
chat-with-github/: README.md  requirements.txt
chat-with-github/chat/: chat.py
chat_with_deepseek_r1_locally/: .gitignore  README.md  pyproject.toml  requirements.txt
chat_with_deepseek_r1_locally/chat/: chat.py
chat_with_deepseek_r1_locally/chat/components/: chat.py
chat_with_github/: .gitignore  README.md  requirements.txt
chat_with_github/chat/: chat.py
chat_with_pdf_locally/: README.md  requirements.txt
chat_with_pdf_locally/chat/: chat.py
chat_with_pdf_locally/chat/components/: chat.py
multi_modal_ai_agent/: README.md  requirements.txt  rxconfig.py
multi_modal_ai_agent/multi_modal_agent/: multi_modal_agent.py
news_agent/: .gitignore  README.md  requirements.txt  rxconfig.py
news_agent/news_agent/: news_agent.py
rag_app/: .gitignore  rxconfig.py
rag_app/rag_app/: rag_app.py
