[project]
name = "chat-w-deepseek-r1-locally"
version = "0.1.0"
description = "Chat with DeepSeek-r1 locally"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.12.12",
    "llama-index-embeddings-huggingface>=0.5.1",
    "llama-index-llms-ollama>=0.5.0",
    "ollama>=0.4.7",
    "pydantic>=2.10.5",
    "reflex>=0.6.8",
    "unzip>=1.0.0",
]
